# PlumeImpactor

./: .gitignore  Cargo.toml  Makefile  README.md  dev.khcrysalis.PlumeImpactor.json  flatpak-build.sh  wxwidgets-extract.py
.github/workflows/: build.yml  release.yml
apps/plume_impactor/: Cargo.toml
apps/plume_impactor/src/: app.rs  listeners.rs  main.rs  subscriptions.rs
apps/plumeimpactor/: Cargo.toml  build.rs
apps/plumeimpactor/src/: app.rs  defaults.rs  frame.rs  handlers.rs  keychain.rs  listeners.rs  login.rs  main.rs  refresh.rs  signer_options.rs  subscriptions.rs  tray.rs
apps/plumeimpactor/src/appearance/: button.rs  mod.rs  picklist.rs
apps/plumeimpactor/src/pages/: default.rs  install.rs  login.rs  mod.rs  settings.rs  work.rs
apps/plumeimpactor/src/screen/: general.rs  impactor_installer.rs  impactor_main.rs  impactor_settings.rs  installer_progress.rs  login_window.rs  mod.rs  package.rs  progress.rs  settings.rs
apps/plumeimpactor/src/screen/windows/: login_window.rs  mod.rs  team_selection_window.rs
apps/plumeimpactor/src/utils/: device.rs  mod.rs  package.rs
apps/plumesign/: Cargo.toml
apps/plumesign/src/: main.rs
apps/plumesign/src/commands/: account.rs  device.rs  macho.rs  mod.rs  sign.rs
apps/udid/: Makefile
crates/core/: Cargo.toml  Makefile
crates/core/src/: CoreFFI.h  CoreFFI.modulemap  bridge.rs  core.udl  lib.rs
crates/core/src/auth/account/: login.rs  token.rs  two_factor_auth.rs
crates/core/src/developer/: session.rs
crates/core/src/developer/qh/: teams.rs
crates/core/src/developer/v1/: capabilities.rs  mod.rs
crates/core/src/store/: mod.rs
crates/core/src/utils/: certificate.rs  macho.rs  mod.rs  provision.rs
crates/gestalt/src/: lib.rs
crates/grand_slam/: Cargo.toml
crates/grand_slam/src/: lib.rs
crates/grand_slam/src/auth/: mod.rs
crates/grand_slam/src/developer/: mod.rs
crates/grand_slam/src/developer/qh/: certs.rs
crates/grand_slam/src/utils/: certificate.rs  mod.rs  provision.rs  signer.rs
crates/options/: Cargo.toml
crates/options/src/: lib.rs  package.rs
crates/plume_core/: Cargo.toml
crates/plume_core/src/: lib.rs
crates/plume_core/src/auth/: anisette_data.rs  mod.rs
crates/plume_core/src/auth/account/: mod.rs  token.rs
crates/plume_core/src/developer/qh/: certs.rs
crates/plume_core/src/developer/v1/: app_ids.rs  capabilities.rs
crates/plume_core/src/utils/: certificate.rs  mod.rs  provision.rs
crates/plume_gestalt/: Cargo.toml
crates/plume_store/: Cargo.toml
crates/plume_store/src/: gsa_account.rs  lib.rs  refresh.rs  store.rs
crates/plume_types/: Cargo.toml
crates/plume_types/src/: bundle.rs  device.rs  lib.rs  options.rs  package.rs  signer.rs
crates/shared/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/types/src/: device.rs  lib.rs  options.rs  package.rs  signer.rs
crates/utils/: Cargo.toml
crates/utils/src/: device.rs  lib.rs  options.rs  package.rs  signer.rs  tweak.rs
ios/uniffi/uniffi/: ContentView.swift  Core.swift  uniffi-Bridging-Header.h  uniffiApp.swift
ios/uniffi/uniffi.xcodeproj/: project.pbxproj
ios/uniffi/uniffi.xcodeproj/project.xcworkspace/xcuserdata/petals.xcuserdatad/: UserInterfaceState.xcuserstate
ios/uniffi/uniffi.xcodeproj/xcuserdata/petals.xcuserdatad/xcschemes/: xcschememanagement.plist
package/: entitlements.plist
package/flatpak/: com.khcrysalis.PlumeImpactor.metainfo.xml  dev.khcrysalis.PlumeImpactor.desktop  dev.khcrysalis.PlumeImpactor.metainfo.xml
package/linux/: dev.khcrysalis.PlumeImpactor.desktop  dev.khcrysalis.PlumeImpactor.json  dev.khcrysalis.PlumeImpactor.metainfo.xml
package/macos/: entitlements.plist
package/macos/Impactor.app/Contents/: Info.plist
package/windows/: custom.rc  dsa_pub.pem  icon.rgba  installer.nsi
patches/: apple-codesign+0.29.0.patch
