[package]
name = "plumeimpactor"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
idevice.workspace = true
tokio.workspace = true
thiserror.workspace = true
uuid.workspace = true
plist.workspace = true
futures.workspace = true
env_logger.workspace = true
plume_core = { path = "../../crates/core" }
plume_utils = { path = "../../crates/types" }
plume_shared = { path = "../../crates/shared" }

egui = "0.32"
eframe = { version = "0.32", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "glow",
    "wayland",
    "x11",
] }
wgpu = { version = "25", features = ["dx12", "vulkan", "metal", "gles"] }
image = "0.25.9"
tray-icon = { version = "0.21.2", default-features = false }
rfd = "0.16.0"
rustls = { version = "0.23.32", features = ["ring"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
[target.'cfg(target_os = "macos")'.dependencies]
gestalt = { path = "../../crates/gestalt" }
[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
