[package]
name = "plumeimpactor"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
idevice.workspace = true
tokio.workspace = true
thiserror.workspace = true
uuid.workspace = true
plist.workspace = true
futures.workspace = true
env_logger.workspace = true
plume_core = { path = "../../crates/plume_core", features = ["tweaks"] }
plume_utils = { path = "../../crates/plume_types" }
plume_store = { path = "../../crates/plume_store" }

rustls = { version = "0.23.32", features = ["ring"] }

# GUI
egui = { git = "https://github.com/PlumeImpactor/plume-egui", rev = "2b94e786" }
eframe = { git = "https://github.com/PlumeImpactor/plume-egui", rev = "2b94e786", default-features = false, features = [
    "wgpu",
    "glow",
    "x11",
] }
wgpu = { version = "27", features = ["dx12", "vulkan", "metal", "gles"] }
image = "0.25.9"
tray-icon = { version = "0.21.2", default-features = false }
rfd = "0.16.0"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
plume_gestalt = { path = "../../crates/plume_gestalt" }

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
