[package]
name = "plume_store"
description = "Data storage layer for Plume Impactor tools."
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
plume_core = { path = "../plume_core" }
# TODO: move this to workspace
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
