[package]
name = "storage"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# TODO: remove explicit versions when workspace dependencies are stable
tokio.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
plume_core = { path = "../core" }
